# ProcessamentoDeArquivosgRPC

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
client_cpp/: CMakeLists.txt  client.cpp
client_python/: client.py
proto/: file_processor.proto
server_cpp/: CMakeLists.txt  server.cpp
